# Moringa_Desk

./: README.md  moringa_desk.db  pyproject.toml  render.yaml
backend/: .env  .env.example  requirements.txt
backend/app/: main.py
backend/app/api/: admin_content.py  admin_users.py  answers.py  auth.py  faqs.py  flags.py  follows.py  me.py  notifications.py  questions.py  related_questions.py  tags.py  votes.py
backend/scripts/: seed_questions.py
backend/tests/: test_accept_answer.py  test_accept_answer_notifications.py  test_admin_users_routes.py  test_answer_model.py  test_answer_notifications.py  test_answer_repo.py  test_answer_routes.py  test_auth_routes_flow.py  test_auth_routes_validation.py  test_auth_schemas.py  test_auth_service.py  test_db_session.py  test_faq_model.py  test_faq_routes.py  test_flag_model.py  test_flag_repo.py  test_flag_routes.py  test_follow_model.py  test_follow_notifications.py  test_follow_repo.py  test_follow_routes.py  test_health.py  test_jwt.py  test_me_routes.py  test_notification_model.py  test_notification_repo.py  test_notification_routes.py  test_password_reset_routes.py  test_password_reset_service.py  test_question_detail.py  test_question_duplicates.py  test_question_filters.py  test_question_model.py  test_question_repo.py  test_question_routes.py  test_question_tag_model.py  test_related_question_model.py  test_related_question_repo.py  test_related_question_routes.py  test_security.py  (+11 more)
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
(+113 files in other folders)
